--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by madhulika for AZ303 demo!</h1>
+    <h1>This is development by madhulika for AZ303 demo!</h1>
     <p class="lead">Welcome Team --- Good Morning DAN</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
